Project6-RDS-module/modules/vpc-module/vpc.tf
resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr_block
    tags = {
        Name = var.vpc_name
    }
}
